<resources>
    <string name="app_name">lonse</string>
    <!--主界面-->
    <string name="bt_webview">webview</string>
    <string name="bt_sidebar">sidebar</string>
    <string name="bt_slidemenu">slidemenu</string>
    <string name="bt_passwordchange">passwordchange</string>
    <string name="bt_login">login</string>
    <string name="bt_set">set</string>
    <string name="bt_accounts">accounts</string>
    <string name="bt_listview">listview</string>
    <string name="bt_recycleview">recycleview</string>
    <string name="bt_selectorlistview">selectorlistview</string>
    <string name="bt_selectorrecycleview">selectorrecycleview</string>
    <string name="bt_viewPage">viewPage</string>
    <string name="bt_gesture">gesture</string>
    <string name="bt_user">user</string>
    <string name="bt_carousel">carousel</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--密码修改界面-->
    <string name="pw_textview_title">请输入新的密码</string>
    <string name="pw_textview_pwold">原密码</string>
    <string name="pw_textview_pwnew1">新密码</string>
    <string name="pw_textview_pwnew2">新密码</string>
    <string name="pw_button_submit">确认</string>


    <!--slide_menu-->
    <string name="slide_userId">用户Id</string>
    <string name="slide_image">图像管理</string>
    <string name="slide_product">设备管理</string>
    <string name="slide_message">事件消息</string>
    <string name="slide_cloud">云服务</string>
    <string name="slide_login">序列号登录</string>
    <string name="slide_set">设置</string>
    <string name="slide_logout">退出</string>

    <!--account-->
    <string name="accounts">切换用户</string>

    <!--set-->
    <string name="set">设置</string>
    <string name="download">下载</string>
    <string name="passwordChange">修改密码</string>
    <string name="gesturePassword">手势密码</string>
    <string name="ssl">SSL</string>
    <string name="unbind">解除绑定</string>
    <string name="messageAvoidance">消息免打扰</string>
    <string name="version">版本</string>
    <string name="language">多语言</string>
    <string name="summerTime">夏令时</string>
    <string name="feedback">意见反馈</string>
    <string name="accounts_set">切换账号</string>
    <string name="set_logout">退出登录</string>

    <!--login-->
    <string name="pw_remember">记住密码</string>
    <string name="pw_find"><u>找回密码</u></string>
    <string name="signIn">注册新账号</string>
    <string name="protocol">登录注册即代表同意<u>服务条款</u></string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
