<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorRed">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/set"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp" />

                <ImageView
                    android:id="@+id/set_back"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:rotation="270"
                    android:src="@drawable/icon_up_3x"
                    android:tint="@color/colorWhite" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/set_Color"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="20dp">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="30dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorBlack"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical|left"
                        android:text="@string/download" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:foregroundGravity="center_vertical"
                        android:src="@drawable/icon_arrow_3x" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="20dp">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="30dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorBlack"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical|left"
                        android:text="@string/passwordChange" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/icon_arrow_3x" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="20dp">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="30dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorBlack"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical|left"
                        android:text="@string/gesturePassword" />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:textOff=""
                        android:textOn=""
                        android:thumb="@drawable/thumb_set"
                        android:track="@drawable/track_set"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="20dp">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="30dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorBlack"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical|left"
                        android:text="@string/ssl" />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:textOff=""
                        android:textOn=""
                        android:thumb="@drawable/thumb_set"
                        android:track="@drawable/track_set"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="20dp">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="30dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorBlack"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical|left"
                        android:text="@string/unbind" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/icon_arrow_3x" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="20dp">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="30dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorBlack"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical|left"
                        android:text="@string/messageAvoidance" />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:gravity="center_vertical"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:textOff=""
                        android:textOn=""
                        android:thumb="@drawable/thumb_set"
                        android:track="@drawable/track_set"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"/>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="30dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorBlack"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical|left"
                        android:text="@string/version" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="30dp"
                        android:textSize="16sp"
                        android:gravity="right"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="20dp"
                        android:text="7830311.1345" />
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/icon_arrow_3x" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="30dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorBlack"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical|left"
                        android:text="@string/language" />
                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="30dp"
                        android:textSize="16sp"
                        android:gravity="right"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="20dp"
                        android:text="自动" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/icon_arrow_3x" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="30dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorBlack"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical|left"
                        android:text="@string/summerTime" />
                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="30dp"
                        android:textSize="16sp"
                        android:gravity="right"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="20dp"
                        android:text="0" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/icon_arrow_3x" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="30dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorBlack"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical|left"
                        android:text="@string/feedback" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/icon_arrow_3x" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorWhite">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="7dp">

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="30dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorBlack"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical|left"
                        android:text="@string/accounts_set" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/switch_account_3x" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/set_Color">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_circle_shape"
                    android:text="@string/set_logout"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>